--- a/T_1/author.html
+++ b/T_1/author.html
@@ -10,14 +10,14 @@
     <title>Сторінка автора Web-сайту</title>
 </head>
 
-<body dir="ltr" class="page-author" style="font-family: 'Times New Roman', serif; color: #333;" align="center" title="Тіло документа сторінки автора">
+<body  dir="ltr" class="page-author" style="font-family: 'Times New Roman', serif; color: #333;" align="center" title="Тіло документа сторінки автора">
 
     <h1 align="center" style="color: green; font-family: 'Courier New', monospace;" title="Головний заголовок">
         Сторінка автора Web-сайту
     </h1>
     <h2 align="center" style="color: #0056b3;" title="Привітання">ЛАСКАВО ПРОСИМО НА МОЮ ДОМАШНЮ СТОРІНКУ!</h2>
 
-    <div style="text-align: left; max-width: 800px; margin: auto;">
+    <div id="main-content" style="text-align: left; max-width: 800px; margin: auto;">
 
         <p id="introduction" align="left" title="Вступне слово">
             <span id="greeting" class="text-highlight" lang="uk">
