--- a/T_1/news.html
+++ b/T_1/news.html
@@ -13,11 +13,11 @@
 
 <body align="center" style="font-family: 'Times New Roman', serif; color: #333;">
 
-    <header style="border-bottom: 2px solid #0056b3; padding-bottom: 10px;" title="Шапка розділу новин">
+    <header id="page-header" style="border-bottom: 2px solid #0056b3; padding-bottom: 10px;" title="Шапка розділу новин">
         <h1 style="color: #0056b3;">Останні Новини</h1>
     </header>
     
-    <section class="news-content" style="max-width: 800px; margin: auto; text-align: left; padding: 15px;">
+    <section id="main-section" class="news-content" style="max-width: 800px; margin: auto; text-align: left; padding: 15px;">
 
         <div id="news-article-1" class="article">
             <h2 style="color: green;">Весняна акція на вітаміни!</h2>
