--- a/T_1/pharmacy.html
+++ b/T_1/pharmacy.html
@@ -19,7 +19,8 @@
 
     <hr width="75%" size="3">
 
-    <table border="0" width="80%" style="margin: auto;">
+    <table  border="0" width="80%" style="margin: auto;">
+        <caption>Столик з ліками</caption>
         <tr>
             <td align="center" valign="top" style="padding-right: 20px;">
                 <img 
@@ -60,6 +61,16 @@
     <p style="font-size: 18px;">
         <a href="news.html" title="Останні новини">Переглянути новини &rarr;</a>
     </p>
-
+<hr>
+    <h3>Форма для прикладу</h3>
+    <form>
+        <input type="checkbox" id="agree" checked> <label for="agree">Погоджуюсь</label><br>
+        <input type="text" value="Неможливо змінити" disabled><br>
+        <input type="email" value="неправильна-адреса" required> (введіть email)<br>
+    </form>
+    <p class="hidden-element">Цей текст приховано.</p>
+    <div class="scrollable-div" style="width: 200px;">
+    Тут багато тексту, який можна прокручувати. Тут багато тексту, який можна прокручувати. Тут багато тексту, який можна прокручувати. Тут багато тексту, який можна прокручувати. Тут багато тексту, який можна прокручувати.
+</div>
 </body>
 </html>
