--- a/T_1/author.html
+++ b/T_1/author.html
@@ -58,6 +58,10 @@
         </p>
 
         <p align="right"><u><i>З повагою, Тимчук Тарас Анатолійович.</i></u></p>
+        <hr align="center" width="75%" size="3">
+<p style="font-size: 18px; text-align: center;">
+    <a href="menu.html" title="Головне меню"><b>ГОЛОВНЕ МЕНЮ</b></a>
+</p>
 
         <p style="font-size: 12px; color: gray;">
             Site is best viewed with Netscape Navigator 4.0
