--- a/T_1/news.html
+++ b/T_1/news.html
@@ -88,11 +88,7 @@
 
     <hr width="75%" size="3">
 
-    <p style="font-size: 18px;">
-        <a href="pharmacy.html" title="Перейти на сторінку аптеки">&larr; На сторінку аптеки</a>
-    </p>
-    <p style="font-size: 18px;">
-        <a href="author.html" title="Перейти на головну">На сторінку автора</a>
+<a href="menu.html" title="Головне меню"><b>ГОЛОВНЕ МЕНЮ</b></a>
     </p>
 
 </body>
