--- a/T_1/pharmacy.html
+++ b/T_1/pharmacy.html
@@ -55,12 +55,9 @@
 
     <hr width="75%" size="3">
 
-    <p style="font-size: 18px;">
-        <a href="author.html" title="Перейти на головну">&larr; Повернутися на сторінку автора</a>
-    </p>
-    <p style="font-size: 18px;">
-        <a href="news.html" title="Останні новини">Переглянути новини &rarr;</a>
-    </p>
+<p style="font-size: 18px; text-align: center;">
+    <a href="menu.html" title="Головне меню"><b>ГОЛОВНЕ МЕНЮ</b></a>
+</p>
 <hr>
     <h3>Форма для прикладу</h3>
     <form>
