--- a/T_1/menu.html
+++ b/T_1/menu.html
@@ -35,6 +35,9 @@
                     <a id="link-lists" href="lists.html" type="text/html" title="Асортимент">Асортимент товарів</a>
                 </li>
                 <li>
+                    <a id="link-tables" href="tables.html" type="text/html" title="Прайс-лист">Прайс-лист (Таблиці)</a>
+                </li>
+                <li>
                     <a id="link-internal" href="#footer" type="text/html" title="До низу сторінки">Внутрішнє посилання (вниз)</a>
                 </li>
             </ul>
