--- a/T_1/menu.html
+++ b/T_1/menu.html
@@ -38,6 +38,9 @@
                     <a id="link-tables" href="tables.html" type="text/html" title="Прайс-лист">Прайс-лист (Таблиці)</a>
                 </li>
                 <li>
+                    <a id="link-form" href="form.html" type="text/html" title="Форма замовлення">Замовити ліки (Форма)</a>
+                </li>
+                <li>
                     <a id="link-internal" href="#footer" type="text/html" title="До низу сторінки">Внутрішнє посилання (вниз)</a>
                 </li>
             </ul>
