--- a/T_1/menu.html
+++ b/T_1/menu.html
@@ -41,6 +41,9 @@
                     <a id="link-form" href="form.html" type="text/html" title="Форма замовлення">Замовити ліки (Форма)</a>
                 </li>
                 <li>
+                    <a id="link-svg" href="svg.html" type="text/html" title="SVG Графіка">SVG Графіка (Лаб. 6)</a>
+                </li>
+                <li>
                     <a id="link-internal" href="#footer" type="text/html" title="До низу сторінки">Внутрішнє посилання (вниз)</a>
                 </li>
             </ul>
