--- a/T_1/menu.html
+++ b/T_1/menu.html
@@ -44,6 +44,9 @@
                     <a id="link-svg" href="svg.html" type="text/html" title="SVG Графіка">SVG Графіка (Лаб. 6)</a>
                 </li>
                 <li>
+                    <a id="link-js" href="js_lab.html" type="text/html" title="JavaScript">JavaScript (Лаб. 7)</a>
+                </li>
+                <li>
                     <a id="link-internal" href="#footer" type="text/html" title="До низу сторінки">Внутрішнє посилання (вниз)</a>
                 </li>
             </ul>
