--- a/T_1/tables.html
+++ b/T_1/tables.html
@@ -24,8 +24,8 @@
         <table class="geometric-table">
           <caption>Графік чергувань провізорів</caption>
           <tr>
-            <td rowspan="2">Зміна A</td>
-            <td colspan="3">Дні тижня</td>
+            <td >Зміна A</td>
+            <td >Дні тижня</td>
           </tr>
           <tr>
             <td>Понеділок</td>
